objects/ContactAssignedProgram__c.object
<CustomObject>
    <description>May 2013 Release. Relates Contact with Partner Program</description>
    <fields>
        <fullName>AccountAssignedProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Assigned Program</label>
        <referenceTo>ACC_PartnerProgram__c</referenceTo>
        <relationshipLabel>Contact Assigned Programs</relationshipLabel>
        <relationshipName>ContactAssignedPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Assigned Programs</relationshipLabel>
        <relationshipName>ContactAssignedPrograms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <label>Partner Program</label>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Contact Assigned Programs</relationshipLabel>
        <relationshipName>ContactAssignedPrograms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.PartnerProgram__c</field>
                <operation>equals</operation>
                <valueField>ProgramLevel__c.PartnerProgram__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Contact Assigned Programs</relationshipLabel>
        <relationshipName>ContactAssignedPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewaldate__c</fullName>
        <label>Renewal date</label>
        <type>Date</type>
    </fields>
    <label>Contact Assigned Program</label>
    <nameField>
        <displayFormat>CAP-{0000000}</displayFormat>
        <label>Contact Assigned Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Assigned Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CAP_VR_MAY13PRM01_CheckParentStatus</fullName>
        <active>true</active>
        <description>For PRM May 13 Release
To check if the PArent Account Assigned PRogram is Active when a Contact Assigned Program is activated.</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
AccountAssignedProgram__r.Active__c = false,
Active__c = true),
true,
false
)))</errorConditionFormula>
        <errorMessage>Please activate parent Account Program and then try again.</errorMessage>
    </validationRules>
</CustomObject>